<resources>
    <string name="app_name">Dicoding Story App</string>
    <string name="title_menu_1">Welcome to the Dicoding Story App! Share your story now.</string>
    <string name="title_menu_2">Dicoding Story App: Your world in stories.</string>
    <string name="title_menu_3">Share your experience of all time!</string>
    <string name="title_menu_4">Start writing your interesting stories on the Dicoding Story App.</string>
    <string name="desc_menu_1">StoryApp is the perfect place to express yourself through writing. Let\'s start writing inspiring stories!</string>
    <string name="desc_menu_2">With the Dicoding Story App, you can easily write, share, and read stories from various authors. Join our community now!</string>
    <string name="desc_menu_3">By sharing your memorable experiences you can keep your experiences valuable.</string>
    <string name="desc_menu_4">Want your short stories to be read by more people? StoryApp is the right platform for you. Let\'s start writing!</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your data first</string>
    <string name="title_login_page">Are you ready to share your story?</string>
    <string name="name_detail">Name</string>
    <string name="logout">Logout Account</string>
    <string name="email_hint">Enter your email</string>
    <string name="name_hint">Enter your name</string>
    <string name="description">Description</string>
    <string name="id_user">Id User</string>
    <string name="description_detail">Description Detail</string>
    <string name="name">Name</string>
    <string name="createdAt">Created at %1$s</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="title_add_error">Upload Error</string>
    <string name="message_add_error">Please insert the image first.</string>
    <string name="title_add_success">Upload Successful!</string>
    <string name="message_add_success">%1$s</string>
    <string name="ok">OK</string>
    <string name="title_dialog_custome">Data Successfully Added</string>
    <string name="description_dialog_custome">Please check your story page.</string>
    <string name="change_language">Change Language</string>
    <string name="error_title_login_dialog">Login Failed</string>
    <string name="error_description_login_dialog">There should be no blank data.</string>
    <string name="error_description_password_login_dialog">The password field cannot be less than 8 characters.</string>
    <string name="success_title_login_dialog">You have successfully logged in.</string>
    <string name="success_description_momen_login_dialog">Please share your moments.</string>
    <string name="error_title_signup_account_login_dialog">Your account has not been registered.</string>
    <string name="error_description_signup_account_login_dialog">Please create an account first.</string>
    <string name="next_signup_account">Continue to Register Account</string>
    <string name="title_logout_account_dialog">Want to log out of your account?</string>
    <string name="yes_logout_account_dialog">Yes</string>
    <string name="upload_error_title_dialog">Upload Failed</string>
    <string name="upload_error_description_dialog">There should be no blank data.</string>
    <string name="registration_success_title_dialog">Account Registration Successful</string>
    <string name="registration_success_description_dialog">Account with %1$s is ready. Let\'s login and share stories with others.</string>
    <string name="registration_text_dialog">Next</string>
    <string name="pass_hint">Enter your password</string>
    <string name="error_description_email_login_dialog">Emails must have the @gmail.com pattern at the end</string>
    <string name="pattern" translatable="false">(@gmail.com)$</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="add_story">Add Story</string>
    <string name="detail_activity">Detail</string>
    <string name="title_information_dialog">Information</string>
    <string name="description_information_dialog">This app already supports three languages: Indonesian, English, and French. To change it press on the three dots in the top right corner</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="error_title_request">Error Receiving Data</string>
    <string name="retry">Try Again</string>
    <string name="cb_current_location">Display with \ncurrent location</string>
    <string name="fab_content_description">Menambahkan data story</string>
</resources>