<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddActivity">

    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/gambar_no_image"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/margin_top_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_add"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/gallery"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        app:layout_constraintTop_toTopOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <TextView
        android:id="@+id/tv_description_add"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/description"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/margin_top_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_camera" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/upload"
        android:layout_marginTop="@dimen/margin_top_bottom"
        app:layout_constraintTop_toBottomOf="@id/tv_description_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>