<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailActivity">

        <ImageView
            android:id="@+id/iv_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/gambar_no_image"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_top_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/name_detail"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_top_bottom"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            app:layout_constraintTop_toBottomOf="@id/iv_detail"
            app:layout_constraintStart_toStartOf="@id/iv_detail"
            app:layout_constraintEnd_toEndOf="@id/iv_detail" />

        <TextView
            android:id="@+id/tv_id_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/id_user"
            android:textSize="@dimen/title_size"
            android:textStyle="italic"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_name_detail"
            app:layout_constraintStart_toStartOf="@id/tv_name_detail"
            app:layout_constraintEnd_toEndOf="@id/tv_name_detail" />

        <TextView
            android:id="@+id/tv_createdAt_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/createdAt"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_id_detail"
            app:layout_constraintStart_toStartOf="@id/tv_id_detail"
            app:layout_constraintEnd_toEndOf="@id/tv_id_detail" />

            <TextView
                android:id="@+id/tv_description_Detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="@string/description_detail"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_createdAt_detail"
                app:layout_constraintStart_toStartOf="@id/tv_id_detail"
                app:layout_constraintEnd_toEndOf="@id/tv_id_detail"
                app:layout_constraintBottom_toBottomOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:lottie_rawRes="@raw/loading"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>