<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_custome_dialog_for_result"
    android:padding="@dimen/padding_dialog_custome_for_success_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check_48px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_dialog_custome"
        android:textSize="@dimen/text_size_title_dialog_custome"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_success"
        app:layout_constraintStart_toEndOf="@id/iv_success"
        app:layout_constraintTop_toTopOf="@id/iv_success"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:textSize="@dimen/text_size_description_dialog_custome"
        android:fontFamily="sans-serif-medium"
        android:text="@string/description_dialog_custome"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toEndOf="@id/iv_success"
        app:layout_constraintEnd_toEndOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ok"
        android:textColor="@color/main_green_color"
        android:textSize="@dimen/text_size_ok_dialog_custome"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_description"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="@+id/tv_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />
</androidx.constraintlayout.widget.ConstraintLayout>